test/js/node/test/parallel/test-stream-reduce.js.log.txt
34 |     }
35 |     return result;
36 |   }
37 |   throw @makeErrorWithCode(4, `The arguments hints is invalid must be an array or string of format "</styles.css>; rel=preload; as=style"`);
38 | }
39 | function validateObject(value, name) {
                                                           ^
TypeError: The "options" argument must be of type object. Received: 1
 code: "ERR_INVALID_ARG_TYPE"

      at internal:streams/operators:201:55
      at asyncFunctionResume (1:11)
      at reduce (internal:streams/operators:201:22)
      at node:assert:672:46
      at promiseReactionJob (1:11)
196 |       return value;
197 |     }
198 |     return kEmpty;
199 |   }
200 |   return map.@call(this, filterFn, options);
201 | async function reduce(reducer, initialValue, options) {
                                                            ^
TypeError: The "options.signal" property must be an instance of AbortSignal. Received true
 code: "ERR_INVALID_ARG_TYPE"

      at internal:streams/operators:201:55
      at asyncFunctionResume (1:11)
      at reduce (internal:streams/operators:201:22)
      at node:assert:672:46
      at promiseReactionJob (1:11)
126 | }
127 | 
128 | {
129 |   // Test result is a Promise
130 |   const result = Readable.from([1, 2, 3, 4, 5]).reduce(sum, 0);
131 |   assert.ok(result instanceof Promise);
               ^
AssertionError: false == true
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-reduce.js:131:10
      at native:11:43

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
